<?xml version="1.0"?>
<package format="2">
  <name>resource_resolver</name>
  <version>1.0.0</version>
  <description>Resource resolver</description>

  <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>
  <author email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslib</depend>

  <test_depend>roslint</test_depend>
</package>
